fix : remove side nav scrollbar

--- a/service/admin/src/styles/globals.css
+++ b/service/admin/src/styles/globals.css
@@ -25,9 +25,12 @@ body {
   }
 }
 
-div {
-  ::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-  }
+nav::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+ul,
+li {
+  line-height: 0;
 }
